# softserve

./: .gitignore  Makefile  README.md  env-example.sh  pyproject.toml
dashboard/: index.html
dashboard/modules/: App.js  Table.js
docs/: integration-guide.html
guides/: aivai_demo.py  creeper-notation.html  creeper-notation.md  event-guide.html  event-guide.md  index.html  integration-guide.html  integration-guide.md
project/: settings.py  urls.py
softserve/: admin.py  api.py  apps.py  exceptions.py  models.py  test_api.py  tests.py  urls.py  views.py
softserve/api/: main.py  schema.py  test_api.py  util.py
softserve/api/routers/: aivai.py  event.py  game.py  player.py  state.py  think.py
softserve/management/commands/: createevent.py
softserve/migrations/: 0001_initial.py  0002_alter_action_player_alter_game_event_and_more.py  0002_event_dashboard_token.py  0003_alter_event_name.py  0003_player_token.py  0004_alter_event_name.py  0004_alter_player_name.py
softserve/templates/softserve/: event_dashboard.html
