[tool.poetry]
name = "softserve"
version = "0.1.0"
description = "API for integrating Harding University software development capstone projects"
authors = ["Richard Schneider <richard@schneiderbox.net>"]
license = "Unlicense"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "0.112.0,<0.115.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
