[tool.poetry]
name = "softserve"
version = "0.1.0"
description = "API for integrating Harding University software development capstone projects"
authors = ["Richard Schneider <richard@schneiderbox.net>"]
license = "Unlicense"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = ">=0.122.0,<0.123.0"}
django = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ipython = "^8.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
